k8s/deployment-site1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: site1-deployment
  namespace: site1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: site1
  template:
    metadata:
      labels:
        app: site1
    spec:
      containers:
      - name: site1
        image: site1:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 80
