k8s/service-site1.yaml
apiVersion: v1
kind: Service
metadata:
  name: site1-service
  namespace: site1
spec:
  selector:
    app: site1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
