k8s/service-site2.yaml
apiVersion: v1
kind: Service
metadata:
  name: site2-service
  namespace: site2
spec:
  selector:
    app: site2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
